--- a/index.html
+++ b/index.html
@@ -33,47 +33,47 @@
       <div class="row">
         <div class="col">9 a.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">10 a.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">11 a.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">12 a.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">1 p.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">2 p.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">3 p.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">4 p.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
       <div class="row">
         <div class="col">5 p.m</div>
         <input type="text" />
-        <div class="col2">Save</div>
+        <div class="col2"><button class="savebtn">Save</button></div>
       </div>
     </div>
 
