--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -32,52 +37,62 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col">9 a.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text1" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="0">Save</button></div>
       </div>
       <div class="row">
         <div class="col">10 a.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text2" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="1">Save</button></div>
       </div>
       <div class="row">
         <div class="col">11 a.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text3" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="2">Save</button></div>
       </div>
       <div class="row">
         <div class="col">12 a.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text4" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="3">Save</button></div>
       </div>
       <div class="row">
         <div class="col">1 p.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text5" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="4">Save</button></div>
       </div>
       <div class="row">
         <div class="col">2 p.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text6" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="5">Save</button></div>
       </div>
       <div class="row">
         <div class="col">3 p.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text7" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="6">Save</button></div>
       </div>
       <div class="row">
         <div class="col">4 p.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text8" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="7">Save</button></div>
       </div>
       <div class="row">
         <div class="col">5 p.m</div>
-        <input type="text" />
-        <div class="col2"><button class="savebtn">Save</button></div>
+        <!-- <input type="text" /> -->
+        <textarea rows="3" id="text9" class="multiLineInput"></textarea>
+        <div class="col2"><button class="savebtn" value="8">Save</button></div>
       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
