--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col">9 a.m</div>
-        <!-- <input type="text" /> -->
+        <!-- <input type="text" id="text1" class="multiLineInput" /> -->
         <textarea rows="3" id="text1" class="multiLineInput"></textarea>
         <div class="col2"><button class="savebtn" value="0">Save</button></div>
       </div>
